tests/idris2/warning/warning009/expected
1/1: Building IrrelevantBinder (IrrelevantBinder.idr)
1/1: Building IrrelevantEnforce (IrrelevantEnforce.idr)
Error: While processing right hand side of bad. Irrelevant variable x cannot be used in a computationally relevant position.

IrrelevantEnforce:6:9--6:10
 2 |
 3 | -- Attempting to use an irrelevant argument in a relevant (value) position
 4 | -- must be rejected with IrrelevantUsed
 5 | bad : .(x : Nat) -> Nat
 6 | bad x = x
             ^

Hint: variables bound by .(x : A) -> B are logically irrelevant and may only appear in erased positions.
1/1: Building IrrelevantLambda (IrrelevantLambda.idr)
1/1: Building SquashExtract (SquashExtract.idr)
Error: While processing right hand side of extract. Irrelevant variable x cannot be used in a computationally relevant position.

SquashExtract:10:24--10:25
 06 | -- position must be rejected by the IrrelevantUsed check.
 07 | -- MkSquash binds its argument as irrelevant (.(x : a)), so x cannot
 08 | -- appear in the return value of a function with a non-squash return type.
 09 | extract : ‖a‖ -> a
 10 | extract (MkSquash x) = x
                             ^

Hint: variables bound by .(x : A) -> B are logically irrelevant and may only appear in erased positions.
